ROC-7939: Review Fixes